Fix mission statement spacing for tablet/narrow layouts.

--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -95,7 +95,10 @@ nav {
   font-size: 150%;
   font-weight: bold;
   line-height: 1.5em;
+
   margin-top: 0;
+  @include respond_to(tablet) { margin-top: 1em; }
+
   margin-bottom: 2em;
 }
 
